WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180377
REGRESSION (
r211531
): Text flow changes and overlaps other text after double-click selecting paragraph
https://bugs.webkit.org/show_bug.cgi?id=180377
Summary
REGRESSION (r211531): Text flow changes and overlaps other text after double-...
alan
Reported
2017-12-04 14:05:54 PST
rdar://problem/34337967
Attachments
Patch
(4.71 KB, patch)
2017-12-04 14:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-12-04 14:09:35 PST
Created
attachment 328387
[details]
Patch
Antti Koivisto
Comment 2
2017-12-04 14:17:17 PST
Comment on
attachment 328387
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328387&action=review
> Source/WebCore/rendering/SimpleLineLayout.cpp:605 > + line.setLogicalLeftOffset(flow.logicalLeftOffsetForLine(height, DoNotIndentText, logicalHeight) + (shouldApplyTextIndent && isFirstLine ? flow.textIndentOffset() : LayoutUnit(0)));
I wonder if the default argument for the height in flow.logicalLeft/RightOffsetForLine could be removed? It feels wrong to call it without knowing where the line is.
alan
Comment 3
2017-12-04 14:19:59 PST
(In reply to Antti Koivisto from
comment #2
)
> Comment on
attachment 328387
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=328387&action=review
> > > Source/WebCore/rendering/SimpleLineLayout.cpp:605 > > + line.setLogicalLeftOffset(flow.logicalLeftOffsetForLine(height, DoNotIndentText, logicalHeight) + (shouldApplyTextIndent && isFirstLine ? flow.textIndentOffset() : LayoutUnit(0))); > > I wonder if the default argument for the height in > flow.logicalLeft/RightOffsetForLine could be removed? It feels wrong to call > it without knowing where the line is.
Yeah, good point. Will address it in a separate patch.
WebKit Commit Bot
Comment 4
2017-12-04 14:52:30 PST
Comment on
attachment 328387
[details]
Patch Clearing flags on attachment: 328387 Committed
r225497
: <
https://trac.webkit.org/changeset/225497
>
WebKit Commit Bot
Comment 5
2017-12-04 14:52:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug