REGRESSION (r211531): Text flow changes and overlaps other text after double-click selecting paragraph https://bugs.webkit.org/show_bug.cgi?id=180377 <rdar://problem/34337967>

Reviewed by Antti Koivisto.

Source/WebCore:

Take floats into account when computing the available width for a certain vertical position.

Test: fast/block/float/simple-line-layout-float-shrink-line.html

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::updateLineConstrains):

LayoutTests:

* fast/block/float/simple-line-layout-float-shrink-line-expected.html: Added.
* fast/block/float/simple-line-layout-float-shrink-line.html: Added.


Canonical link: https://commits.webkit.org/196341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225497 268f45cc-cd09-0410-ab3c-d52691b4dbfc